--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "@types/mathjs": "^9.4.1",
     "katex": "^0.16.22",
+    "mathjs": "^14.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-katex": "^3.1.0",
