--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "math-tools",
+  "name": "unitcircle",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://nsl106.github.io/unitcircle",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -37,6 +39,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "tw-animate-css": "^1.3.7",
